--- a/src/app/app.html
+++ b/src/app/app.html
@@ -22,7 +22,7 @@
           <tr class="table-light">
             <td colspan="4" class="ps-2 py-3">
               <strong>Seasons average:</strong>
-              {{ promedioSeasons | number:'1.0-0' }}
+              {{ promedioSeasons}}
             </td>
           </tr>
         </tbody>
